# knowledge-companion

./: .gitignore  Cargo.toml  README.md
config/: knowledge-companion.toml
dev-tests/: test_json_escape.sh
migrations/: 0001_initial.sql  0002_index_jobs.sql
src/: lib.rs  main.rs
src/config/: bundle.rs  mod.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/http/: mod.rs
src/index/: embed.rs  fts.rs  graph.rs  mod.rs  tokenizer.rs  vector.rs
src/ingest/: chunker.rs  docx.rs  markdown.rs  mod.rs  pdf.rs  txt.rs
src/mcp/: adapter.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/rag/: citations.rs  llm.rs  mod.rs
src/retrieve/: mod.rs
src/services/: health.rs  mod.rs  stats.rs
src/sync/: executor.rs  indexer.rs  jobs.rs  mod.rs  planner.rs  scanner.rs  watcher.rs
src/translate/: mod.rs
tests/: embedding_test.rs  fts_test.rs  http_mcp_test.rs  integration_test.rs  mock_embedding_test.rs  parser_test.rs
