[package]
name = "knowledge-companion"
version = "0.1.0"
edition = "2021"
description = "KnowledgeCompanion MCP Server - Portable personal knowledge management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["limit", "cors", "auth"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
zip = "0.6"
pdf-extract = "0.7"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "knowledge-companion"
path = "src/bin/knowledge-companion.rs"

[[bin]]
name = "kcctl"
path = "src/bin/kcctl.rs"
